--- a/projector/templates/projector/project/details.html
+++ b/projector/templates/projector/project/details.html
@@ -123,13 +123,13 @@
         </ul>
         {% endifhasperm %}
 
-        {% with project.get_repo_url|put_username_into_url:user as "project_url" %}
+        {% with project.get_repo_url|put_username_into_url:user as project_url %}
         <ul class="messages">
             <li class="message message-info">{% trans "Clone repository" %}:
             <input id="id_project_repository_url" value="hg clone {{ project_url }}"
-                size="{{ project.get_repo_url|put_username_into_url:user|length|add:'11' }}"
-                onblur="this.value='hg clone {{ project.get_repo_url }}';"/></li>
-            {% if "://example.com" in project.get_repo_url %}
+                size="{{ project_url|length|add:'15' }}"
+                onblur="this.value='hg clone {{ project_url }}';"/></li>
+            {% if "://example.com" in project.get_repo_url or "@example.com" in project.get_repo_url %}
             <li class="message message-warning">
                 {% trans "Repository URL seems to be broken. Maybe you have forgotten to " %}
                 <a href="{% url admin:sites_site_change 1 %}">{% trans "set site" %}</a> {% trans "at admin panel?" %}
