--- a/projector/templates/projector/project/repository/browse.html
+++ b/projector/templates/projector/project/repository/browse.html
@@ -5,6 +5,7 @@
 {% load native %}
 
 {% block col_left %}{{ block.super }}
+{% block info_block %}
 <div class="richtemplates-panel">
     <h5>{% trans "Node's information" %}</h5>
     <div class="richtemplates-panel-content">
@@ -15,7 +16,7 @@
                         <th>{% trans "Path" %}</th>
                         <td><a class="show-tipsy"
                                href="{% url projector_project_sources_browse project.slug root.changeset.id root.path %}"
-                               title="{% trans "Show node" %} {{ root.path }}">{{ root.path|default:"/"|slice:"20" }}</a>
+                               title="{% trans "Show node" %} {{ root.path }}">{{ root.path|default:"/"|slice:"20" }}{% if root.path|length > 20 %}...{% endif %}</a>
                         </td>
                     </tr>
                     <tr>
@@ -43,7 +44,11 @@
                     </tr>
                     <tr>
                         <th>{% trans "Download" %}</th>
-                        <td><a href="{% url projector_project_sources_raw project.slug root.changeset.id root.path %}">{% trans "raw" %}</a></td>
+                        <td><a href="{% url projector_project_sources_raw project.slug root.changeset.id root.path %}">{% trans "raw file" %}</a></td>
+                    </tr>
+                    <tr>
+                        <th>{% trans "Annotate" %}</th>
+                        <td><a href="{% url projector_project_sources_annotate project.slug root.changeset.id root.path %}">{% trans "annotate" %}</a></td>
                     </tr>
                     {% endif %}
                 </tbody>
@@ -56,7 +61,7 @@
                     <a href="{% url projector_project_sources_browse project.slug changeset.id root.path %}"
                        class="show-tipsy"
                        title="{% trans "Show at revision" %}">{{ changeset.revision }}:{{ changeset.id }}</a>
-                (<a href="{% url projector_project_file_diff project.slug root.changeset.id changeset.id root.path %}"
+                (<a href="{% url projector_project_file_diff project.slug changeset.id root.changeset.id root.path %}"
                    class="show-tipsy"
                    title="{% trans "Show diff" %}">{% trans "diff" %}</a>)
            {% comment %}
@@ -70,6 +75,7 @@
         </div>
     </div>
 </div>
+{% endblock info_block %}
 {% endblock %}
 
 {% block col_main_extra %}
@@ -163,12 +169,19 @@
         </table>
         {% endif %}
         {% if root.is_file %}
-        <div class="codeblock">
-            {% highlight root.content root.lexer_alias linenos=true anchorlinenos=true lineanchors=line cssclass="code-highlight" %}
-        </div>
+            {% if root.is_binary %}
+            <ul class="messages">
+                <li class="message message-warning">{% trans "This is binary file" %}</li>
+            </ul>
+            {% else %}        
+            <div class="codeblock">
+                {% highlight root.content root.lexer_alias linenos=true anchorlinenos=true lineanchors=line cssclass="code-highlight" %}
+            </div>
+            {% endif %}
         {% endif %}
     </div>
     {% endblock %}
+
 </div>
 </div>
 
