Fixing wrong task count at projects listing page

--- a/projector/templates/projector/project/repository/browse.html
+++ b/projector/templates/projector/project/repository/browse.html
@@ -60,7 +60,7 @@
                 <li>
                     <a href="{% url projector_project_sources_browse project.slug changeset.id root.path %}"
                        class="show-tipsy"
-                       title="{% trans "Show at revision" %}">{{ changeset.revision }}:{{ changeset.id }}</a>
+                       title="{% trans "Show at revision" %}">{{ changeset.revision }}:{{ changeset.raw_id }}</a>
                 (<a href="{% url projector_project_file_diff project.slug changeset.id root.changeset.id root.path %}"
                    class="show-tipsy"
                    title="{% trans "Show diff" %}">{% trans "diff" %}</a>)
