--- a/projector/templates/projector/project/milestones/home.html
+++ b/projector/templates/projector/project/milestones/home.html
@@ -38,7 +38,7 @@
         <ul class="nav-horizontal">
             <li>{% anchor name _("Name") %}</li>
             <li>{% anchor created_at _("Created at") %}</li>
-            <li>{% anchor task__count _("Tasks") %}</li>
+            <li>{% anchor task__count _("Task count") %}</li>
         </ul>
     </div>
 
