--- a/projector/templates/projector/project/list.html
+++ b/projector/templates/projector/project/list.html
@@ -22,7 +22,7 @@
 {% block col_main_content %}
 
     <ul class="nav-inline">
-        <li><a class="button-link" href="{% url projector_project_create %}">{% trans "Create new project" %}</a></li>
+        <li><a class="button-link" href="{% url projector_project_create request.user.username %}">{% trans "Create new project" %}</a></li>
     </ul>
 
     {% load pagination_tags %}
