--- a/projector/templates/projector/project/milestones/add.html
+++ b/projector/templates/projector/project/milestones/add.html
@@ -26,7 +26,7 @@
                 <input id="id_submit" type="submit" name="submit"
                     value="{% trans "Create milestone" %}"/>
                 <input type="button" onclick="window.location='{% spaceless %}
-                    {% url projector_project_milestones project.slug %}
+                    {% url projector_project_milestones project.author.username project.slug %}
                     {% endspaceless %}'" value="{% trans "Cancel" %}"/>
             </div>
         </form>
