--- a/projector/templates/projector/project/repository/changeset_list.html
+++ b/projector/templates/projector/project/repository/changeset_list.html
@@ -51,7 +51,7 @@
         <tbody class="datatable-tbody">
             {% for changeset in repository %}
             <tr class="{% cycle "odd" "even" %} hoverable">
-                <td><a href="{% url projector_project_sources_browse project.slug changeset.id '' %}"
+                <td><a href="{% url projector_project_sources_browse project.author.username project.slug changeset.id '' %}"
                        class="browser-changeset block-link show-tipsy-left"
                        title="{% trans "Browse revision's content" %}">{{ changeset.revision }}:{{ changeset.raw_id }}</a>
                 </td>
