--- a/example_project/templates/base_1col.html
+++ b/example_project/templates/base_1col.html
@@ -7,13 +7,16 @@
         <!-- One Main Panel -->
         <div id="col_single">
         {% block col_single %}
-            <div class="richtemplates-panel">
-                <h5>Single column base template</h5>
-                <div class="richtemplates-panel-content">
+            <div class="panel">
+                <h5>{% block col_single_title %}Single column base template{% endblock %}</h5>
+                <div class="panel-content">
+                    {% block col_single_content %}
                     Lorem ipsum dolor ...
+                    {% endblock %}
                 </div>
             </div>
         {% endblock col_single %}
         </div>
         
     {% endblock content %}
+
