Fixes for configuration per project

--- a/projector/templates/projector/task/mail.html
+++ b/projector/templates/projector/task/mail.html
@@ -13,6 +13,8 @@
 {% trans "Status" %}: {{ task.status }}
 {% trans "Priority" %}: {{ task.priority }}
 
-{% trans "Content" %}:
+{% trans "Content" %}
+{% for x in _("Content") %}={% endfor %}
+
 {{ task.description }}
 
