Fixed cancel button url at project settings

--- a/projector/templates/projector/project/config/home.html
+++ b/projector/templates/projector/project/config/home.html
@@ -19,7 +19,7 @@
                 value="{% trans "Update" %} {% trans "project" %}"/>
                 <input type="button"
                        value="{% trans "Cancel" %}"
-                       onclick="window.location='{{ form.instance.get_absolute_url }}'"/>
+                       onclick="window.location='{{ project.get_absolute_url }}'"/>
             </div>
         </form>
 
